<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:fitsSystemWindows="true"
    android:orientation="vertical"
    android:layout_height="match_parent">

    <include layout="@layout/app_bar_lesson"/>

    <android.support.v4.widget.NestedScrollView
        android:layout_width="match_parent"
        app:layout_behavior="@string/appbar_scrolling_view_behavior"
        android:layout_height="wrap_content">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="@dimen/activity_horizontal_margin">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/colorTitle"
                android:text="@string/listen_question"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/light_vertical_margin"
                android:textSize="@dimen/content_size"
                android:textColor="@color/colorContent"
                android:id="@+id/id_question"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/activity_vertical_margin"
                android:textColor="@color/colorTitle"
                android:text="@string/content_label"/>

            <com.chan.babytextviewedit.BabyTextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@null"
                android:textSize="@dimen/content_size"
                android:textColor="@color/colorContent"
                android:layout_marginTop="@dimen/light_vertical_margin"
                android:id="@+id/id_content"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/activity_vertical_margin"
                android:textColor="@color/colorTitle"
                android:text="@string/new_words_label"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="@dimen/content_size"
                android:textColor="@color/colorContent"
                android:layout_marginTop="@dimen/light_vertical_margin"
                android:id="@+id/id_newWordsContent"/>


            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/activity_vertical_margin"
                android:textColor="@color/colorTitle"
                android:text="@string/trans_label"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="@dimen/content_size"
                android:textColor="@color/colorContent"
                android:layout_marginTop="@dimen/light_vertical_margin"
                android:id="@+id/id_transContent"/>
        </LinearLayout>
    </android.support.v4.widget.NestedScrollView>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <android.support.design.widget.FloatingActionButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/id_more"
            android:layout_alignParentRight="true"
            android:layout_alignParentBottom="true"
            android:src="@drawable/ic_add_white_24dp"
            android:layout_marginBottom="@dimen/activity_vertical_margin"
            android:layout_marginRight="@dimen/activity_horizontal_margin"/>
    </RelativeLayout>
</android.support.design.widget.CoordinatorLayout>
